# mailjet-apiv3-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PERFORMANCE.md  README.md  SECURITY.md  environment-dev.yaml  environment.yaml  manage.sh  pyproject.toml  setup.py  test.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: commit_checks.yaml  issue-triage.yml  pr_validation.yml  publish.yml
conda.recipe/: meta.yaml
mailjet_rest/: __init__.py  __init__.pyi  _version.py  client.py  client.pyi
mailjet_rest/utils/: guardrails.py  version.py
samples/: campaign_sample.py  contacts_sample.py  email_template_sample.py  getting_started_sample.py  new_sample.py  parse_api_sample.py  segments_sample.py  sender_and_domain_samples.py  smoke_readme_runner.py  smoke_test.py  statistic_sample.py
tests/: test_boot.py  test_client.py  test_version.py
tests/integration/: test_client.py
tests/unit/: test_client.py  test_legacy_deprecations.py  test_version.py
