[build-system]
requires = ["setuptools>=77.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"  # Don't try to guess next version
local_scheme = "no-local-version"
# Ignore uncommitted changes
git_describe_command = "git describe --tags --match 'v[0-9]*.[0-9]*.[0-9]*'"
write_to = "mailjet_rest/_version.py"
write_to_template = '__version__ = "{version}"'
#fallback_version = "X.Y.ZrcN.postN.devN"  # Explicit fallback

[tool.setuptools]
py-modules = ["mailjet_rest._version"]

[tool.setuptools.packages.find]
include = ["mailjet_rest", "mailjet_rest.*", "samples", "tests", "tests.*"]

[tool.setuptools.package-data]
mailjet_rest = ["py.typed", "*.pyi"]

[project]
name = "mailjet-rest"
dynamic = ["version"]
description = "Mailjet V3 API wrapper"
authors = [
    { name = "starenka", email = "starenka0@gmail.com" },
    { name = "Mailjet", email = "api@mailjet.com" },
]
maintainers = [
  {name = "Serhii Kupriienko", email = "kupriienko.serhii@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.32.5",
    "typing-extensions>=4.7.1; python_version < '3.11'",
]

keywords = [
        "Mailjet API v3 / v3.1 Python Wrapper",
        "wrapper",
        "email python-wrapper",
        "transactional-emails",
        "mailjet",
        "mailjet-api",
    ]
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Communications :: Email",
        "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://dev.mailjet.com"
"Documentation" = "https://dev.mailjet.com"
"Repository" = "https://github.com/mailjet/mailjet-apiv3-python"
"Issue Tracker" = "https://github.com/mailjet/mailjet-apiv3-python/issues"

[project.optional-dependencies]
linting = [
    "bandit",
    "pre-commit",
    "ruff",
    "mypy",
    "pyright",
    "types-requests",
    "vulture",
    "python-dotenv>=0.19.2",
]

tests = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-xdist",
    "coverage>=4.5.4",
    "pyfakefs",
]

profilers = [
    "scalene>=1.3.16",
    "snakeviz",
]

build = [
    "python-build",
    "twine",
    "conda-build",
]

spelling = ["typos"]

other = [
    "jsonschema",
    "types-jsonschema",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-exclude = ["tests", "test"]

line-length = 120

# Assume Python 3.10.
target-version = "py310"
# Enumerate all fixed violations.
show-fixes = true


[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules/#rules
select = ["ALL"]

external = ["DOC", "PLR"]

exclude = ["samples/*"]

# Never enforce `E501` (line length violations).
ignore = [
    # Architectural & backwards compatibility constraints
    "A002",    # Argument `id` is shadowing a Python builtin
    "ANN401",  # Dynamically typed expressions (typing.Any) are allowed for JSON payloads
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition

    # Complexity & Magic Numbers constraints for legacy SDK design
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments in function definition
    "PLR0917", # Too many positional arguments

    # Missing Documentation constraints
    "CPY001",  # Missing copyright notice at top of file
    "DOC501",  # Raised exception missing from docstring
    "E501",    # Line length (handled by formatter)

    # Formatter incompatibilities (Mandatory ignores when using Ruff Formatter)
    "COM812",  # Trailing comma missing
    "ISC001",  # Implicit string concatenation
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
exclude = ["*.pyi"]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
#docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
#docstring-code-line-length = "dynamic"

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
#"path/to/file.py" = ["E402"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
strict = true
# Adapted from this StackOverflow post:
# https://stackoverflow.com/questions/55944201/python-type-hinting-how-do-i-enforce-that-project-wide
python_version = "3.10"
mypy_path = "type_stubs"
namespace_packages = true
# This flag enhances the user feedback for error messages
pretty = true
# 3rd party import
ignore_missing_imports = true
# flag to suppress Name <var> already defined on line
allow_redefinition = false
# Disallow dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = true
# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and optional handling
no_implicit_optional = true
# Configuring warnings
warn_return_any = false
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
# Misc
follow_imports = "silent"
strict_optional = false
strict_equality = true
#exclude = '''(?x)(
#    (^|/)test[^/]*\.py$    # files named "test*.py"
#  )'''
exclude = [
    "mailjet_rest/samples",
]

# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true
disable_error_code = 'misc'

[tool.pyright]
include = ["mailjet_rest"]
exclude = ["samples/*", "**/__pycache__"]
reportAttributeAccessIssue = false
reportMissingImports = false


[tool.bandit]
# usage: bandit -c pyproject.toml -r .
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.bandit.any_other_function_with_shell_equals_true]
no_shell = [
  "os.execl", "os.execle", "os.execlp", "os.execlpe", "os.execv", "os.execve",
  "os.execvp", "os.execvpe", "os.spawnl", "os.spawnle", "os.spawnlp",
  "os.spawnlpe", "os.spawnv", "os.spawnve", "os.spawnvp", "os.spawnvpe",
  "os.startfile"
]
shell = [
  "os.system", "os.popen", "os.popen2", "os.popen3", "os.popen4",
  "popen2.popen2", "popen2.popen3", "popen2.popen4", "popen2.Popen3",
  "popen2.Popen4", "commands.getoutput", "commands.getstatusoutput"
]
subprocess = [
  "subprocess.Popen", "subprocess.call", "subprocess.check_call",
  "subprocess.check_output"
]

[tool.coverage.run]
source_pkgs = ["mailjet_rest"]
branch = true
parallel = true
omit = [
    "samples/*",
]

[tool.coverage.paths]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
